unpackaged/main/default/objects/Medication_Statement_Side_Effect__c/Medication_Statement_Side_Effect__c.object-meta.xml
<CustomObject>
    <description>Records the Side Effects a Patient has experienced with a particular Medication they&apos;re taking.</description>
    <label>Medication Statement Side Effect</label>
    <nameField>
        <displayFormat>MSSE-{0}</displayFormat>
        <label>Medication Statement Side Effect Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medication Statement Side Effects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>