unpackaged/main/default/objects/Medication_Statement_Side_Effect__c/fields/Medication_Statement__c.field-meta.xml
<CustomField>
    <fullName>Medication_Statement__c</fullName>
    <description>Parent Record - the Medication Statement that links the Patient to the Medication they&apos;re taking.</description>
    <label>Medication Statement</label>
    <referenceTo>HealthCloudGA__EhrMedicationStatement__c</referenceTo>
    <relationshipLabel>Medication Statement Side Effects</relationshipLabel>
    <relationshipName>Medication_Statement_Side_Effects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>