unpackaged/main/default/objects/Medication_Statement_Side_Effect__c/fields/Side_Effect_Type__c.field-meta.xml
<CustomField>
    <fullName>Side_Effect_Type__c</fullName>
    <label>Side Effect Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Diarrhea</fullName>
            </value>
            <value>
                <fullName>Dizziness</fullName>
            </value>
            <value>
                <fullName>Hairloss</fullName>
            </value>
            <value>
                <fullName>Loss of Appetite</fullName>
            </value>
            <value>
                <fullName>Loss of Energy</fullName>
            </value>
            <value>
                <fullName>Loss of Sensation</fullName>
            </value>
            <value>
                <fullName>Nausea</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Skin issues</fullName>
            </value>
            <value>
                <fullName>Urinary Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>